// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Emoji /> test should render inline emojis correctly 1`] = `
<DocumentFragment>
  <span
    class="emoji-container"
  >
    Hello 
    <img
      alt="🐢"
      class="emoji"
      draggable="false"
      src="https://twemoji.maxcdn.com/v/13.0.1/svg/1f422.svg"
    />
    .
  </span>
  <span>
    Do
    <span>
      you
      <span>
        even
        <span>
          nest
          <span>
            🐢
            <span>
              ?
            </span>
          </span>
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<Emoji /> test should render standalone emojis correctly 1`] = `
<DocumentFragment>
  <span
    class="emoji-container"
  >
    <img
      alt="🐢"
      class="emoji"
      draggable="false"
      src="https://twemoji.maxcdn.com/v/13.0.1/svg/1f422.svg"
    />
  </span>
</DocumentFragment>
`;
